--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -33,6 +33,9 @@ TableFilterFuba=Fubas
 TableFilterProgram=Programme
 TableFilterShortcut=Shortcuts
 
+TableFilterCategory=Filter Kategorie
+TableFilterDescription=Filter Beschreibung
+
 #XTIT: AboutMeFragment
 AboutMeLastNameLabel=Name
 AboutMeFirstNameLabel=Vorname
