--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -9,12 +9,16 @@ HeaderButtonNameWiki=Wiki
 HeaderButtonNameList=Objektliste
 HeaderButtonNameAbout=About me
 
+#XTIT: FooterFragment
+FooterText= Thorsten Bender - SAP Entwicklung und Beratung
+
 #XTIT: StartFragment
 StartTileContentObjectlist=Sammlung von mir verwendeter Transaktionen, Tabellen, Klassen, Fubas und Shortcuts
 StartTileSubheaderObjectlist=Objektliste
 StartTileSubheaderAboutMe=About me
 StartTileContentWiki=Nützliche Informationen, Tipps und Tricks
 StartTileSubheaderWiki=Wiki
+StartTileSubheaderContactMe=Contact me
 
 #XTIT: ListFragment
 TableColumnNameType=Typ
