--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -6,6 +6,8 @@ appDescription=App Description
 #XTIT: HeaderFragment
 HeaderButtonNameHome=Home
 HeaderButtonNameWiki=Wiki
+HeaderButtonNameWikiStandard=Standardansicht
+HeaderButtonNameWikiOverview=Listansicht
 HeaderButtonNameList=Objektliste
 HeaderButtonNameAbout=About me
 
@@ -77,9 +79,30 @@ textBtnNavRight=Nächster Eintrag
 
 #XTIT: WikiFragment
 ShowMore=Alles anzeigen
+WikiTags=Tags
 
 #XTIT: WikiDetailFragment
 WikiCreationDate=Erstellungsdatum
 WikiId=Id
 WikiDetailLoadFirst=Ende erreicht \nNeuster Eintrag geladen
 WikiDetailLoadLast=Anfang erreicht \nÄltester Eintrag geladen
+
+#XTIT: WikiOverviewFragment
+WikiOverviewTableId=ID
+WikiOverviewTableTitle=Titel
+WikiOverviewTableDate=Datum
+
+#XTIT: ContactMeFragment
+idDialogContactMeTitle=Kontaktformular
+txtBtnContactMeCancel=Abbrechen
+txtBtnContactMeOk=Nachricht senden
+lblContactMeEmail=Email-Adresse
+lblContactMeFirstName=Vorname
+lblContactMeLastName=Nachname
+PlaceholderInputContactMeEmail=max.mustermann@email.com
+PlaceholderInputContactMeFirstName=Max
+PlaceholderInputContactMeLastName=Mustermann
+PlaceholderInputContactMeTextArea=Enter text here
+txtMessageSendSuccess= Nachricht gesendet
+txtMessageSendError= Nachricht konnte nicht gesendet werden. \n\nGerne kannst du mich direkt per Email kontaktieren: thorsten.bendere@mail.ch
+txtContactMeMandatory=Pflichtfeld
