--- a/i18n/i18n_en.properties
+++ b/i18n/i18n_en.properties
@@ -94,12 +94,12 @@ WikiOverviewTableDate=Date
 
 #XTIT: ContactMeFragment
 idDialogContactMeTitle=Contact form
-txtBtnContactMeCancel=cancel
+txtBtnContactMeCancel=Cancel
 txtBtnContactMeOk=Send message
 lblContactMeEmail=Email adress
 lblContactMeFirstName=First name
 lblContactMeLastName=Surename
-PlaceholderInputContactMeEmail=max.mustermann@email.com
+PlaceholderInputContactMeEmail=john.doe@email.com
 PlaceholderInputContactMeFirstName=John
 PlaceholderInputContactMeLastName=Doe
 PlaceholderInputContactMeTextArea=Enter text here
