--- a/i18n/i18n_en.properties
+++ b/i18n/i18n_en.properties
@@ -49,7 +49,9 @@ AboutMeCityLabel=Location
 AboutMeCity=Bern
 AboutMeCountryLabel=Country
 AboutMeEmailLabel=E-Mail
+AboutMeContactMeButtonText=Contact form
 AboutMeDegreeLabel=Degree
+AboutMeGitHubLabel=GitHub
 AboutMeLinkedInLabel=LinkedIn
 AboutMeXingLabel=Xing
 AboutMeJobTitleLabel=Actual position
