--- a/i18n/i18n_de.properties
+++ b/i18n/i18n_de.properties
@@ -49,7 +49,9 @@ AboutMeCityLabel=Ort
 AboutMeCity=Bern
 AboutMeCountryLabel=Land
 AboutMeEmailLabel=E-Mail
+AboutMeContactMeButtonText=Kontaktformular
 AboutMeDegreeLabel=Abschluss
+AboutMeGitHubLabel=GitHub
 AboutMeLinkedInLabel=LinkedIn
 AboutMeXingLabel=Xing
 AboutMeJobTitleLabel=Aktuelle Position
