--- a/i18n/i18n_en.properties
+++ b/i18n/i18n_en.properties
@@ -27,6 +27,11 @@ TableColumnNameType=Type
 TableColumnNameCategory=Categorie
 TableColumnNameValue=Value
 TableColumnNameDescription=Description
+TableColumnNameCopy=Copy
+
+TableSelected=Selected
+TableCopied=Copied to clipboard
+TableCopiedError=Copying error
 
 AbapListDataTitle=Objects (0)
 AbapListDataTitleCount=Objects
