--- a/i18n/i18n_de.properties
+++ b/i18n/i18n_de.properties
@@ -27,6 +27,11 @@ TableColumnNameType=Typ
 TableColumnNameCategory=Kategorie
 TableColumnNameValue=Wert
 TableColumnNameDescription=Beschreibung
+TableColumnNameCopy=Kopieren
+
+TableSelected=Ausgewählt
+TableCopied=In Zwischenablage kopiert
+TableCopiedError=Fehler beim Kopieren
 
 AbapListDataTitle=Objekte (0)
 AbapListDataTitleCount=Objekte
