--- a/i18n/i18n_de.properties
+++ b/i18n/i18n_de.properties
@@ -46,6 +46,7 @@ TableFilterShortcut=Shortcuts
 
 TableFilterCategory=Filter Kategorie
 TableFilterDescription=Filter Beschreibung
+TableFilterValue=Filter Wert
 
 #XTIT: AboutMeFragment
 AboutMeLastNameLabel=Name
@@ -119,5 +120,6 @@ LanguageTitle=Einstellungen
 LanguageDefine=Sprache festlegen
 German=Deutsch
 English=Englisch
+Spanish=Spanisch
 LanguageApply=Anwenden
 LanguageCancel=Abbrechen
