--- a/i18n/i18n_en.properties
+++ b/i18n/i18n_en.properties
@@ -46,6 +46,7 @@ TableFilterShortcut=Shortcuts
 
 TableFilterCategory=Filter category
 TableFilterDescription=Filter description
+TableFilterValue=Filter value
 
 #XTIT: AboutMeFragment
 AboutMeLastNameLabel=Surname
@@ -119,5 +120,6 @@ LanguageTitle=Settings
 LanguageDefine=Define language
 German=German
 English=English
+Spanish=Spanish
 LanguageApply=Apply
 LanguageCancel=Cancel
