--- a/i18n/i18n_es.properties
+++ b/i18n/i18n_es.properties
@@ -4,12 +4,12 @@ appTitle=Homepage
 appDescription=App Description
 
 #XTIT: HeaderFragment
-HeaderButtonNameHome=Home
+HeaderButtonNameHome=Inicio
 HeaderButtonNameWiki=Wiki
 HeaderButtonNameWikiStandard=Vista predeterminada
 HeaderButtonNameWikiOverview=Vista de lista
 HeaderButtonNameList=Lista de objetos
-HeaderButtonNameAbout=About me
+HeaderButtonNameAbout=Acerca de mí
 
 #XTIT: FooterFragment
 FooterText= Thorsten Bender - SAP desarrollo y asesoramiento
@@ -17,13 +17,13 @@ FooterText= Thorsten Bender - SAP desarrollo y asesoramiento
 #XTIT: StartFragment
 StartTileContentObjectlist=Colección de transacciones, tablas, clases, fubas y accesos directos que utilizo
 StartTileSubheaderObjectlist=Lista de objetos
-StartTileSubheaderAboutMe=About me
+StartTileSubheaderAboutMe=Acerca de mí
 StartTileContentWiki=Información útil, consejos y trucos
 StartTileSubheaderWiki=Wiki
 StartTileSubheaderContactMe=Contáctame
 
 #XTIT: ListFragment
-TableColumnNameType=Typ
+TableColumnNameType=Tipo
 TableColumnNameCategory=Categoría
 TableColumnNameValue=Valor
 TableColumnNameDescription=Descripción
@@ -103,7 +103,7 @@ WikiOverviewTableDate=Fecha
 #XTIT: ContactMeFragment
 idDialogContactMeTitle=Formulario de contacto
 txtBtnContactMeCancel=Cancelar
-txtBtnContactMeOk=Nachricht senden
+txtBtnContactMeOk=Enviar mensaje
 lblContactMeEmail=Correo electrónico
 lblContactMeFirstName=Nombre
 lblContactMeLastName=Apellido
